Add parser to plot.xml
Also move all classes into separate packages

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundBlack"
-    tools:context=".MapActivity">
+    tools:context=".activities.MapActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
