--- a/app/src/main/res/layout/activity_black_screen.xml
+++ b/app/src/main/res/layout/activity_black_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundBlack"
-    tools:context=".BlackScreenActivity">
+    tools:context=".activities.BlackScreenActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
