Realize saving the last stage

--- a/app/src/main/res/xml/scenario_uk.xml
+++ b/app/src/main/res/xml/scenario_uk.xml
@@ -48,10 +48,10 @@
         <text>
             <block>\t\t— Несіть їх сюди! — Девіс скерував солдат, що тягли поранених людей. — Давайте! Хутчіш!\n\t\tЧерез декілька хвилин вибухи зупинились.\n\t\t— Кінець? — запитав Марк. — Закінчилося?\n\t\t— Нікому не виходити! — прокричав Сержант Девіс.
 </block>
-            <block>Я взяв Марка за руку та потягнув ближче до виходу.\n\t\t— Це ненадовго. — сказав я йому. — Вони беруть паузу, щоб змінити напрямок обстрілу. Але за цей час можна спробувати когось врятувати. Нам слід перевірити, може хтось потребує допомоги.
+            <block>\t\tЯ взяв Марка за руку та потягнув ближче до виходу.\n\t\t— Це ненадовго. — сказав я йому. — Вони беруть паузу, щоб змінити напрямок обстрілу. Але за цей час можна спробувати когось врятувати. Нам слід перевірити, може хтось потребує допомоги.
 </block>
-            <block>Щойно ми вийшли з будівлі, як ворог знову розпочав артобстріл. Марк інтуїтивно забіг назад в укриття. За цей час я помітив, як навпроти, під уламками будівлі застрягла жінка, що намагалася вибратися самотужки. Я вже хотів кинутися допомагати їй, коли почув крик малої дитини, що стояла посеред головної площі.</block>
-            <block>На площі, на якій, кілька хвилин тому стояли і ми. Я знав, що маю вчинити так само як Марк. Проте, вирішив врятувати хоч когось. Переді мною стояв непростий вибір - врятувати жінку з-під завалу чи малу дитину, що стояла посеред площі та розгублено плакала.</block>
+            <block>\t\tЩойно ми вийшли з будівлі, як ворог знову розпочав артобстріл. Марк інтуїтивно забіг назад в укриття. За цей час я помітив, як навпроти, під уламками будівлі застрягла жінка, що намагалася вибратися самотужки. Я вже хотів кинутися допомагати їй, коли почув крик малої дитини, що стояла посеред головної площі.</block>
+            <block>\t\tНа площі, на якій, кілька хвилин тому стояли і ми. Я знав, що маю вчинити так само як Марк. Проте, вирішив врятувати хоч когось. Переді мною стояв непростий вибір - врятувати жінку з-під завалу чи малу дитину, що стояла посеред площі та розгублено плакала.</block>
         </text>
         <image>image_5</image>
         <choice>Врятувати дитину</choice>
@@ -86,7 +86,7 @@
         <text>
             <block>\t\tНастав новий день. Розпочалося ранкове зібрання. За вчорашній день, мабуть кожен солдат втратив якогось близького, тому всі були дуже засмучені і пригнічені. Сержант Девіс розпочав промову з оголошення списку загиблих під час вчорашнього артобстрілу. За його словами, за вчорашній день загинуло більше людей ніж за увесь час разом. Далі він перейшов до видачі завдань.</block>
             <block>\t\t— Бєрнс, Рендал, Джойз - Північно-західне крило! — наказував Девіс, після чого ті, кого він назвав відкликалися.\n\t\t— Фішер, Грант - Південно-західне! — продовжував він.\n\t\t— Мартінез, Мітчел, Тейлор - Східне крило! — почувши прізвища трьох друзів поспіль Марк відверто зрадів та непомітно для всіх штовхнув мене ліктем. До слова, він завжди стояв поряд зі мною і завжди робив так, якщо чув хорошу новину.</block>
-            <block>Яким би не був поганим той день, враховуючи останні події, але тоді, за довгий період часу, ми нарешті побачили свого хорошого друга - Стівена Мартінеза. За підрахунками Марка, Стівен провалявся в госпіталі 12 днів. А попав він туди після одного з обстрілів, в результаті якого отримав травму ноги.</block>
+            <block>\t\tЯким би не був поганим той день, враховуючи останні події, але тоді, за довгий період часу, ми нарешті побачили свого хорошого друга - Стівена Мартінеза. За підрахунками Марка, Стівен провалявся в госпіталі 12 днів. А попав він туди після одного з обстрілів, в результаті якого отримав травму ноги.</block>
             <block>\t\t— Було не так і погано — жартував Стівен, вихваляючись тим, що він мав 12 вільних від війни днів.\n\t\t— Як там Еліс? — питав Марк. — Вона не питала про мене? Вона не казала коли буде вільна?\n\t\t— Все добре з нею. Питала про тебе. — відповідав йому Стівен.</block>
             <block>\t\tЗавідуючою госпіталя при форпості “Південний” була молода Еліс Хестер, яка дуже подобалася Маркові.\n\t\t— Ось ми і дійшли! — мало не викрикнув Стівен, коли ми зайняли потрібний пост. Він вже мабуть і засумував за цим.</block>
             <block>\t\tЗазвичай, оборона форпосту – справа нудна та однотипна. Всі ворожі солдати з Тандора, весь час сидять в своїх окопах і не висовуються. Тому, наша робота це всього лиш споглядати, а чи раптом ті дурні не вирішили піти на нас напролом. Самі ж артобстріли відбуваються досить нечасто, проте, нажаль, з великими втратами.</block>
@@ -139,7 +139,7 @@
     </stage>
     
     <stage type="choice">
-        <id>AA0014</id>
+        <id>AA014</id>
         <text>
             <block>\t\tЦе мав бути звичайний день. Усі зібралися на площі та чекали Девіса, який майже ніколи не запізнювався. Коли він прийшов, все почалось як зазвичай. Після його промови, він хотів розпочати роздавати завдання, але його перебив крик Сержант Брендона Перкінса, який біг вулицею.</block>
             <block>\t\t— Сержанте! Сержанте! — кричав той.\n\t\t— Слухаю вас!\n\t\t— Готується великий штурм! Розвідка доповіла щойно! — захеканий Сержант Брендон заледве вимовив ті слова.</block>
