--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -62,11 +62,17 @@
                 android:background="@drawable/choice_button"
                 android:text="Спробувати врятувати когось із табора Егелчайл"/>
 
-
-
-
         </LinearLayout>
 
+        <ImageButton
+            android:id="@+id/imageButtonMapSettings"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:background="@color/transparent"
+            android:onClick="onClickSettings"
+            app:srcCompat="@drawable/ic_settings" />
 
     </FrameLayout>
 </android.support.constraint.ConstraintLayout>
