--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,8 +20,8 @@
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
             android:textSize="16sp"
-            android:text="@string/unpause"
-            android:onClick="onClickContinue"/>
+            android:text="@string/resume"
+            android:onClick="onClickResume"/>
 
         <Button
             android:id="@+id/buttonRestart"
