--- a/app/src/main/res/layout/activity_stage.xml
+++ b/app/src/main/res/layout/activity_stage.xml
@@ -16,9 +16,10 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
             app:srcCompat="@drawable/image_4"/>
 
         <LinearLayout
