Import scenario_ru.xml

--- a/app/src/main/res/xml/scenario_uk.xml
+++ b/app/src/main/res/xml/scenario_uk.xml
@@ -112,7 +112,7 @@
         <text>
             <block>\t\tМинуло декілька днів відтоді, як Стівен повернувся з госпіталя. В цей день Марк випросив у Сержанта Девіса відгул, щоб допомогти у госпіталі з пораненими. Ми ж з Стівеном одразу зрозуміли, чого він так рвався у госпіталь. Він хотів зайвий раз побачитися із Еліс. </block>
             <block>\t\t— Ти чуєш цей галас? — питав я у Стівена — Ось там, послухай.\n\t\t— Нічого не чую.\n\t\tАле галас і справді був. Він доходив з північної сторони міста. Приблизно в тому районі, де був облаштований госпіталь. “Що ж це може бути” — подумав я.</block>
-            <block>\t\tА! Чую! — вигукнув Стівен. Гадки не маю що це може бути. Доноситься ніби з нашого госпіталю?\n\t\t— Та напевно.\n\t\t— Давай може сходимо та глянемо, що там сталося? — одразу ж запропонував я, будучи вже готовим спускатися з дерев’яного підвісу біля стіни.</block>
+            <block>\t\tА! Чую! — вигукнув Стівен. - Гадки не маю що це може бути. Доноситься ніби з нашого госпіталю?\n\t\t— Та напевно.\n\t\t— Давай може сходимо та глянемо, що там сталося? — одразу ж запропонував я, будучи вже готовим спускатися з дерев’яного підвісу біля стіни.</block>
         </text>
         <image>image_4</image>
     </stage>
@@ -562,7 +562,7 @@
             <block>\t\t— Ми йдемо з форту. — почав говорити я.\n\t\t— Ми з Стоунхейлу! — одразу ж перебив мене Рональд. — Всі троє родом зі Стоунхейлу!\n\t\t— А що робите тут, у Сейнт-Вілоу? — запитував офіцер.\n\t\t— Просто подорожуємо. — відповів Рональд. — Якісь проблеми?</block>
             <block>\t\tЧерез декілька питань офіцери нас залишили, а ми продовжили йти до вокзалу.</block>
             <block>\t\t— Ну ти і бовдур, Ральфе! — казав мені Рональд. — Ти хоч розумієш, що якщо б ти розповів їм правду, нас би одразу заарештували?!\n\t\t— Я погоджуюсь з Рональдом. — казав Стівен. — Ти нас міг сильно підставити. Добре хоча б Рональд втрутився..\n\t\t— Гаразд, ходімо до вокзалу. В нас ще повно справ. — говорив Рональд.</block>
-            <block>\t\tДорогою назад я усвідомив, що міг наробити, сказавши тоді тим офіцерам правду. Потім, я ще не один раз згадував цю ситуацію, та уявляв собі, що б відбулося, якщо б в той момент, мене не втрутився Рональд..\n\t\tОтже, ми виконали усі справи, які запланували. А ввечері, зібралися в парку, та почали обговорювати все те, що нам вдалося дізнатися.</block>
+            <block>\t\tДорогою назад я усвідомив, що міг наробити, сказавши тоді тим офіцерам правду. Потім, я ще не один раз згадував цю ситуацію, та уявляв собі, що б відбулося, якщо б в той момент не втрутився Рональд..\n\t\tОтже, ми виконали усі справи, які запланували. А ввечері, зібралися в парку, та почали обговорювати все те, що нам вдалося дізнатися.</block>
         </text>
         <image>image_18</image>
     </stage>
