--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -40,7 +40,7 @@
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
             android:textSize="16sp"
-            android:text="@string/change_language"
+            android:text="@string/changeLanguage"
             android:onClick="onClickChangeLanguage"/>
 
     </LinearLayout>
