Realize landscape mode for all layouts

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,10 +8,15 @@
     tools:context=".activities.SettingsActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/buttonContinue"
@@ -19,9 +24,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
-            android:textSize="16sp"
+            android:onClick="onClickResume"
             android:text="@string/resume"
-            android:onClick="onClickResume"/>
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/buttonRestart"
@@ -29,9 +34,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
-            android:textSize="16sp"
+            android:onClick="onClickRestart"
             android:text="@string/restart"
-            android:onClick="onClickRestart"/>
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/buttonChangeLanguage"
@@ -39,9 +44,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
-            android:textSize="16sp"
+            android:onClick="onClickChangeLanguage"
             android:text="@string/changeLanguage"
-            android:onClick="onClickChangeLanguage"/>
+            android:textSize="16sp" />
 
     </LinearLayout>
 
