--- a/app/src/main/res/layout-land/activity_stage.xml
+++ b/app/src/main/res/layout-land/activity_stage.xml
@@ -33,14 +33,15 @@
                 android:id="@+id/textViewMainBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@color/fontWhite"
-                android:padding="20dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:background="@drawable/choice_button"
+                android:fontFamily="@font/regular"
+                android:padding="20dp"
                 android:text="    — Марк, скільки вже? — запитав я.
-    — 47 днів — неохоче, сонним голосом відповів Марк." />
+    — 47 днів — неохоче, сонним голосом відповів Марк."
+                android:textColor="@color/fontWhite"
+                android:textSize="17sp" />
 
 
             <LinearLayout
@@ -55,40 +56,42 @@
                     android:id="@+id/textViewChoice1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:textColor="@color/fontWhite"
                     android:layout_marginRight="10dp"
-                    android:padding="20dp"
+                    android:layout_weight="3"
                     android:background="@drawable/choice_button"
-                    android:text="Choice 1 would be very very very long for example like this or even more and more bigger"/>
+                    android:fontFamily="@font/regular"
+                    android:padding="20dp"
+                    android:text="Choice 1 would be very very very long for example like this or even more and more bigger"
+                    android:textAlignment="center"
+                    android:textColor="@color/fontWhite"
+                    android:textSize="17sp" />
 
                 <TextView
                     android:id="@+id/textViewChoice2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:textColor="@color/fontWhite"
-                    android:padding="20dp"
                     android:background="@drawable/choice_button"
-                    android:text="Choice 2 Simple text text"/>
+                    android:fontFamily="@font/regular"
+                    android:padding="20dp"
+                    android:text="Choice 2 Simple text text"
+                    android:textAlignment="center"
+                    android:textColor="@color/fontWhite"
+                    android:textSize="17sp" />
 
                 <TextView
                     android:id="@+id/textViewChoice3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:textColor="@color/fontWhite"
-                    android:padding="20dp"
-                    android:visibility="gone"
                     android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
                     android:background="@drawable/choice_button"
-                    android:text="Choice 3 would be very very very long for example like this"/>
+                    android:fontFamily="@font/regular"
+                    android:padding="20dp"
+                    android:text="Choice 3 would be very very very long for example like this"
+                    android:textAlignment="center"
+                    android:textColor="@color/fontWhite"
+                    android:textSize="17sp" />
 
             </LinearLayout>
 
