--- a/app/src/main/res/layout/activity_black_screen.xml
+++ b/app/src/main/res/layout/activity_black_screen.xml
@@ -18,10 +18,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:textColor="@color/fontWhite"
-            android:textSize="16sp"
+            android:fontFamily="@font/regular"
             android:text="Some long long long long long long long text, long long long text. Another long long long long long long long text, long long long text."
-            />
+            android:textColor="@color/fontWhite"
+            android:textSize="17sp" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
