--- a/app/src/main/res/layout/activity_disclaimer.xml
+++ b/app/src/main/res/layout/activity_disclaimer.xml
@@ -27,34 +27,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:textColor="@color/fontWhite"
+                android:fontFamily="@font/regular"
+                android:text="@string/disclaimer1"
                 android:textAlignment="center"
-                android:textSize="30sp"
-                android:text="@string/disclaimer1" />
+                android:textColor="@color/fontWhite"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/textViewDisclaimer2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:layout_marginLeft="50dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginRight="50dp"
-                android:textColor="@color/fontWhite"
+                android:fontFamily="@font/regular"
+                android:text="@string/disclaimer2"
                 android:textAlignment="center"
-                android:textSize="20sp"
-                android:text="@string/disclaimer2" />
+                android:textColor="@color/fontWhite"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textViewDisclaimer3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:layout_marginLeft="50dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginRight="50dp"
-                android:textColor="@color/fontWhite"
+                android:fontFamily="@font/regular"
+                android:text="@string/disclaimer3"
                 android:textAlignment="center"
-                android:textSize="20sp"
-                android:text="@string/disclaimer3" />
+                android:textColor="@color/fontWhite"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -68,10 +71,11 @@
                 android:id="@+id/textViewInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/fontLightGrey"
+                android:fontFamily="@font/regular"
+                android:text="@string/info_about_tap"
                 android:textAlignment="center"
-                android:textSize="16sp"
-                android:text="@string/info_about_tap" />
+                android:textColor="@color/fontLightGrey"
+                android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
 
