--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
+            android:fontFamily="@font/regular"
             android:onClick="onClickResume"
             android:text="@string/resume"
             android:textSize="16sp" />
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
+            android:fontFamily="@font/regular"
             android:onClick="onClickRestart"
             android:text="@string/restart"
             android:textSize="16sp" />
@@ -44,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@color/fontWhite"
+            android:fontFamily="@font/regular"
             android:onClick="onClickChangeLanguage"
             android:text="@string/changeLanguage"
             android:textSize="16sp" />
