--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
+    <color name="colorPrimary">#2B2B2B</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#4D4208</color>
 
     <!-- BACKGROUND -->
     <color name="backgroundBlack">#000000</color>
     <color name="backgroundTextBox">#ea131313</color>
-
-
 
     <!-- FONTS -->
     <color name="fontWhite">#efefef</color>
