--- a/app/src/main/res/xml/scenario_en.xml
+++ b/app/src/main/res/xml/scenario_en.xml
@@ -143,7 +143,7 @@
             <block>\t\tIt was supposed to be just another day. Everybody gathered on the square and waited for Davis, who was almost never late. When he eventually came, everything started as usual. After his speech, he started assigning tasks, but got interrupted by sudden scream of the Sergeant Brandon Perkins, who ran along the street.</block>
             <block>\t\t— Sergeant! Sergeant! — he shouted.\n\t\t— Yes, I am listening!\n\t\t— A big assault is being prepared! The intelligence has just reported! — Sergeant Brandon hardly spoke those words.</block>
             <block>\t\t— What?! When?! — Davis asked indignantly.\n\t\t— I don’t know. They said only — "Several days".\n\t\tWhen we all went to the posts, Ronald nearly knocked me down from my feet, as he pushed me over my shoulder.</block>
-            <block>\t\t— So what!? Are you happy?! Now we are all dead! — Shouted Ronald. Honestly, I've never seen him like that before.\n\t\t— Well, what do you have to offer?! — Marc came up for me.\n\t\t— What offer, huh? A run through the mines, you dumbass! This is our only way out. How come you not understand that?</block>
+            <block>\t\t— So what!? Are you happy?! Now we are all dead! — shouted Ronald. Honestly, I've never seen him like that before.\n\t\t— Well, what do you have to offer?! — Mark came up for me.\n\t\t— What offer, huh? A run through the mines, you dumbass! This is our only way out. How come you not understand that?</block>
         </text>
         <image>image_2</image>
         <choice>Stay defend the outpost</choice>
