--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -18,7 +18,7 @@
             android:id="@+id/textViewEnd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/regular"
             android:text="@string/endGameText"
             android:textAlignment="center"
@@ -30,7 +30,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/fontWhite"
+            android:background="@drawable/settings_button"
             android:fontFamily="@font/regular"
             android:onClick="onClickRestart"
             android:text="@string/restartButton"
