--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -11,7 +11,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="9"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -19,8 +18,7 @@
             android:id="@+id/buttonLanguageEN"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="@color/fontWhite"
+            android:background="@drawable/settings_button"
             android:fontFamily="@font/regular"
             android:onClick="onClickSelectLanguage"
             android:text="@string/englishLanguageButton"
@@ -31,7 +29,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/fontWhite"
+            android:background="@drawable/settings_button"
             android:fontFamily="@font/regular"
             android:onClick="onClickSelectLanguage"
             android:text="@string/russianLanguageButton"
@@ -42,7 +40,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/fontWhite"
+            android:background="@drawable/settings_button"
             android:fontFamily="@font/regular"
             android:onClick="onClickSelectLanguage"
             android:text="@string/ukrainianLanguageButton"
