--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,21 +9,16 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/buttonContinue"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="@color/fontWhite"
+            android:background="@drawable/settings_button"
             android:fontFamily="@font/regular"
             android:onClick="onClickResume"
             android:text="@string/resume"
@@ -34,7 +29,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/fontWhite"
+            android:background="@drawable/settings_button"
             android:fontFamily="@font/regular"
             android:onClick="onClickRestart"
             android:text="@string/restart"
@@ -45,7 +40,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/fontWhite"
+            android:background="@drawable/settings_button"
             android:fontFamily="@font/regular"
             android:onClick="onClickChangeLanguage"
             android:text="@string/changeLanguage"
