--- a/app/src/main/res/xml/scenario_ru.xml
+++ b/app/src/main/res/xml/scenario_ru.xml
@@ -118,7 +118,7 @@
     <stage type="simple">
         <id>AA012</id>
         <text>
-            <block>\t\tЧим ближе мы подходили к госпиталю, тем больше мы понимали, что произошло что—то серьезное. На площади, напротив госпиталя, мы заметили большую толпу людей. Там стояли военные и гражданские.</block>
+            <block>\t\tЧем ближе мы подходили к госпиталю, тем больше мы понимали, что произошло что—то серьезное. На площади, напротив госпиталя, мы заметили большую толпу людей. Там стояли военные и гражданские.</block>
             <block>\t\tК слову, наш форпост выглядел как настоящая крепость. С западной и восточной сторон были большие стены, метров 20 высотой. А с севера и юга, нас окружали величественные горы горного хребта Грендиш. Таким образом, форпост был неким городом—крепостью.</block>
             <block>\t\tСреди толпы мы заметили нескольких людей, сидевших на земле.\n\t\t— Пленные, наверное. — сразу же предложил свою версию Стивен.\n\t\t— Это военные из форпоста "Северный". — поправил Стивена один из гражданских, который стоял рядом с нами в толпе.</block>
             <block>\t\t— Они несколько дней назад, прямо перед штурмом, с помощью шахт бежали из форпоста, тем самым спасли себе жизнь. Оказывается, вокруг нас, в горах, полно шахтных ходов. Они все соединены между собой. Есть даже ход между двумя форпостами. Но эти шахты давным—давно заброшены. Видимо поэтому о них никто и не слышал.</block>
