--- a/app/src/main/res/layout/activity_disclaimer.xml
+++ b/app/src/main/res/layout/activity_disclaimer.xml
@@ -70,8 +70,10 @@
             <TextView
                 android:id="@+id/textViewInfo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:fontFamily="@font/regular"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
                 android:text="@string/info_about_tap"
                 android:textAlignment="center"
                 android:textColor="@color/fontLightGrey"
